RESOLVED FIXED307155
[WPE] Unified build failure due to missing include
https://bugs.webkit.org/show_bug.cgi?id=307155
Summary [WPE] Unified build failure due to missing include
Philippe Normand
Reported 2026-02-06 02:42:36 PST
Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:178:35: error: implicit instantiation of undefined template 'WTF::CompletionHandler<void ()>' 178 | CompletionHandler<void()> callback; | ^ /var/home/phil/WebKit/snap-build/WPE/Release/WTF/Headers/wtf/Forward.h:120:26: note: template is declared here 120 | template<typename> class CompletionHandler; | ^
Attachments
Philippe Normand
Comment 1 2026-02-06 02:53:19 PST
EWS
Comment 2 2026-02-06 09:51:41 PST
Committed 306953@main (665066552292): <https://commits.webkit.org/306953@main> Reviewed commits have been landed. Closing PR #58040 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.