[WPE] Unified build failure due to missing include https://bugs.webkit.org/show_bug.cgi?id=307155

Reviewed by Adrian Perez de Castro.

Fix implicit instantiation of undefined template 'WTF::CompletionHandler<void ()>' by explicitly
including the CompletionHandler.h header.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:

Canonical link: https://commits.webkit.org/306953@main